--- a/index.html
+++ b/index.html
@@ -4,21 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Italo Matos - Portfolio</title>
 </head>
 <body>
 
     <img src="img/foto.jpg" alt="Italo com quadros ao fundo" width="300">
-    <h1>Italo de Matos Saldanha</h1>
-    <p>Olá, pessoa! Meu nome é Italo, sou de Manaus, Amazonas (sim, moro no coração da Amazônia!). Sou apaixonado por ciência, tecnologia e também por gatos. No momento sou graduando de <strong> Engenharia da Computação</strong> na UFAM e desde fevereiro de 2021 estudo <strong>Desenvolvimento Web</strong> na Trybe.</p>
+    <h1>Italo de Matos</h1>
+    <p>Olá, pessoa! Meu nome é Italo, sou de Manaus, Amazonas (sim, moro no coração da Amazônia!). Sou apaixonado por ciência, tecnologia e também por gatos. No momento sou graduando de <strong> Engenharia da Computação</strong> na UFAM e desde fevereiro de 2021 estudo <strong>Desenvolvimento Web</strong> na Trybe. </p>
 
     <h3>Algumas das minhas habilidades: </h3>
 
     <ul>
         <li><em>Curioso, empenhado, empático, amigável.</em></li>
         <li>Adoro aprender coisas novas.</li>
+        <li>Gosto de solucionar problemas.</li>
     </ul>
 
 
+    <h3>Sites Favoritos: </h3>
+    <ul>
+    <li><a href="https://www.tecmundo.com.br/">Tecmundo</a></li>
+    <li><a href="https://www.tudocelular.com/">Tudocelular</a></li>
+    <li><a href="https://www.nasa.gov/">Nasa</a></li>
+    </ul>
+
+    <h3>Minha playlist favorita no Spotify: </h3>
+
+    <iframe src="https://open.spotify.com/embed/playlist/6rsauQL7nZZI3C0JSXikLX" width="50%" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 </body>
 </html>
