Added h1 and h3 in style.css

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <h1>Italo de Matos</h1>
     <p>Olá, pessoa! Meu nome é Italo, sou de Manaus, Amazonas (sim, moro no coração da Amazônia!). Sou apaixonado por ciência, tecnologia e também por gatos. No momento sou graduando de <strong> Engenharia da Computação</strong> na UFAM e desde fevereiro de 2021 estudo <strong>Desenvolvimento Web</strong> na Trybe. </p>
 
-    <h3>Algumas das minhas habilidades: </h3>
+    <h3> Algumas das minhas habilidades: </h3>
 
     <ul>
-        <li><em>Curioso, empenhado, empático, amigável.</em></li>
+        <li class="item-1">Curioso, empenhado, empático, amigável.
+        </li>
         <li>Adoro aprender coisas novas.</li>
         <li>Gosto de solucionar problemas.</li>
     </ul>
