added class tecmundo to style.css

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <h3>Sites Favoritos: </h3>
     <ul>
-    <li><a href="https://www.tecmundo.com.br/">Tecmundo</a></li>
+    <li class="tecmundo"><a href="https://www.tecmundo.com.br/">Tecmundo</a></li>
     <li><a href="https://www.tudocelular.com/">Tudocelular</a></li>
     <li><a href="https://www.nasa.gov/">Nasa</a></li>
     </ul>
