Added classes tudocelular and nasa to style.css

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
     <h3>Sites Favoritos: </h3>
     <ul>
-    <li class="tecmundo"><a href="https://www.tecmundo.com.br/">Tecmundo</a></li>
-    <li><a href="https://www.tudocelular.com/">Tudocelular</a></li>
-    <li><a href="https://www.nasa.gov/">Nasa</a></li>
+    <li><a href="https://www.tecmundo.com.br/" class="tecmundo">Tecmundo</a></li>
+    <li><a href="https://www.tudocelular.com/" class="tudocelular">Tudocelular</a></li>
+    <li ><a href="https://www.nasa.gov/" class="nasa">Nasa</a></li>
     </ul>
 
     <h3>Minha playlist favorita no Spotify: </h3>
