--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <li ><a href="https://www.nasa.gov/" class="nasa">Nasa</a></li>
     </ul>
 
-    <h3>Minha playlist favorita no Spotify: </h3>
+    <h3>Minha playlist no Spotify: </h3>
 
     <iframe src="https://open.spotify.com/embed/playlist/6rsauQL7nZZI3C0JSXikLX" width="50%" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 </body>
